deployment/aliyun/research/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monday-research
  labels:
    app.kubernetes.io/part-of: monday
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
